# sakata-bot

./: Cargo.toml  README.md
src/: api.rs  embed.rs  main.rs  model.rs  s3.rs  types.rs
src/command/: card.rs  collection.rs  join.rs  mod.rs  party.rs  starcard.rs  swap.rs
src/types/: json.rs  mod.rs  model.rs
