[package]
name = "sakata-bot"
version = "0.1.0"
authors = ["bruno319 <brunovieira319@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.9"}
jikan-rs = { git = "https://github.com/bruno319/jikan-rs" }