[package]
name = "sakata-bot"
version = "0.1.0"
authors = ["bruno319 <brunovieira319@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "utils"], version = "0.9"}
reqwest = { version = "0.10.9", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1.6"
log = "0.4.11"
env_logger = "0.8.2"
jikan-rs = { git = "https://github.com/bruno319/jikan-rs" }