[package]
name = "sakata-bot"
version = "0.1.0"
authors = ["bruno319 <brunovieira319@hotmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "utils"], version = "0.9" }
reqwest = { version = "0.10.9", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1.6"
log = "0.4.11"
env_logger = "0.8.2"
rusoto_s3 = "0.43.0"
rusoto_core = "0.43.0"
bytes = { version = "0.5", features = ["serde"] }